--- a/src/main/resources/com/example/assignment4picrosspuzzlegame/Picross.fxml
+++ b/src/main/resources/com/example/assignment4picrosspuzzlegame/Picross.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.assignment4picrosspuzzlegame.PicrossController">
+<GridPane fx:id="grid" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.assignment4picrosspuzzlegame.PicrossController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -24,35 +29,12 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <Label fx:id="label_5" alignment="CENTER" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="4">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
-        <Label fx:id="label_6" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="5">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
-        <Label fx:id="label_4" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="3">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
-        <Label fx:id="label_3" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="2">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
-        <Label fx:id="label_2" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="1">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
+      <Label />
         <Label fx:id="label_a" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="1">
             <font>
                 <Font size="10.0" />
             </font></Label>
-        <Label fx:id="label_e" alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="5">
-            <font>
-                <Font size="10.0" />
-            </font></Label>
-        <Label fx:id="label_d" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="4">
+        <Label fx:id="label_b" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="2">
             <font>
                 <Font size="10.0" />
             </font></Label>
@@ -60,7 +42,15 @@
             <font>
                 <Font size="10.0" />
             </font></Label>
-        <Label fx:id="label_b" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="2">
+        <Label fx:id="label_d" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="4">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
+        <Label fx:id="label_e" alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.columnIndex="5">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
+        <Label fx:id="label_2" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="1">
             <font>
                 <Font size="10.0" />
             </font></Label>
@@ -81,36 +71,54 @@
                     </stops>
                 </LinearGradient>
             </textFill></Button>
-        <Button fx:id="b5" layoutX="93.0" layoutY="94.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-        <Button fx:id="b4" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-        <Button fx:id="b3" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
         <Button fx:id="b2" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-        <Button fx:id="b11" layoutX="93.0" layoutY="94.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <Button fx:id="b10" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-        <Button fx:id="b9" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-        <Button fx:id="b8" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-        <Button fx:id="b7" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <Button fx:id="b3" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+        <Button fx:id="b4" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+        <Button fx:id="b5" layoutX="93.0" layoutY="94.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+        <Label fx:id="label_3" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="2">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
         <Button fx:id="b6" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Button fx:id="b14" layoutX="93.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-        <Button fx:id="b13" layoutX="426.0" layoutY="178.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <Button fx:id="b7" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <Button fx:id="b8" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        <Button fx:id="b9" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+        <Button fx:id="b10" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+        <Label fx:id="label_4" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="3">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
+        <Button fx:id="b11" layoutX="93.0" layoutY="94.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Button fx:id="b12" layoutX="426.0" layoutY="178.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <Button fx:id="b13" layoutX="426.0" layoutY="178.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <Button fx:id="b14" layoutX="93.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
         <Button fx:id="b15" layoutX="342.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-        <Button fx:id="b23" layoutX="426.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-        <Button fx:id="b22" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-        <Button fx:id="b21" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-        <Button fx:id="b20" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-        <Button fx:id="b19" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-        <Button fx:id="b18" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-        <Button fx:id="b17" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <Label fx:id="label_5" alignment="CENTER" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="4">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
         <Button fx:id="b16" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-        <Button fx:id="b25" layoutX="342.0" layoutY="344.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-        <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefWidth="99.0" text="Quit" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+        <Button fx:id="b17" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <Button fx:id="b18" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+        <Button fx:id="b19" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+        <Button fx:id="b20" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+        <Label fx:id="label_6" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0" wrapText="true" GridPane.rowIndex="5">
+            <font>
+                <Font size="10.0" />
+            </font></Label>
+        <Button fx:id="b21" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <Button fx:id="b22" layoutX="176.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+        <Button fx:id="b23" layoutX="426.0" layoutY="261.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
         <Button fx:id="b24" layoutX="426.0" layoutY="344.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+        <Button fx:id="b25" layoutX="342.0" layoutY="344.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+        <Label fx:id="nameofFile" alignment="CENTER" prefWidth="100.0" text="#Label" GridPane.rowIndex="6" />
+      <Label GridPane.columnIndex="1" GridPane.rowIndex="6" />
         <Button fx:id="newGameButton" mnemonicParsing="false" onAction="#showSolution" prefHeight="25.0" prefWidth="99.0" text="New Game" GridPane.columnIndex="2" GridPane.rowIndex="6">
             <font>
                 <Font size="10.0" />
             </font></Button>
-        <Label fx:id="nameofFile" alignment="CENTER" prefWidth="100.0" text="#Label" GridPane.rowIndex="6" />
+      <Label GridPane.columnIndex="3" GridPane.rowIndex="6" />
+        <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefWidth="99.0" text="Quit" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+      <Label GridPane.columnIndex="5" GridPane.rowIndex="6" />
     </children>
 </GridPane>
-
