--- a/src/main/resources/com/example/assignment4picrosspuzzlegame/Picross.fxml
+++ b/src/main/resources/com/example/assignment4picrosspuzzlegame/Picross.fxml
@@ -113,7 +113,7 @@
         <Button fx:id="b25" layoutX="342.0" layoutY="344.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
         <Label fx:id="nameofFile" alignment="CENTER" prefWidth="100.0" text="#Label" GridPane.rowIndex="6" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="6" />
-        <Button fx:id="newGameButton" mnemonicParsing="false" onAction="#showSolution" prefHeight="25.0" prefWidth="99.0" text="New Game" GridPane.columnIndex="2" GridPane.rowIndex="6">
+        <Button fx:id="newGameButton" mnemonicParsing="false" onAction="#getNewPuzzle" prefHeight="25.0" prefWidth="99.0" text="New Game" GridPane.columnIndex="2" GridPane.rowIndex="6">
             <font>
                 <Font size="10.0" />
             </font></Button>
